--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,22 @@
                     <appendAssemblyId>false</appendAssemblyId>
                 </configuration>
             </plugin>
-        </plugins>
+            <plugin>
+              <!-- Build an executable JAR -->
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-jar-plugin</artifactId>
+              <version>3.1.0</version>
+              <configuration>
+                <archive>
+                  <manifest>
+<!--                     <addClasspath>true</addClasspath> -->
+<!--                     <classpathPrefix>lib/</classpathPrefix> -->
+                    <mainClass>main.Main</mainClass>
+                  </manifest>
+                </archive>
+              </configuration>
+            </plugin>
+        </plugins>    
     </build>
     <dependencies>
         <dependency>
