--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
-                    <finalName>cloud-servant</finalName>
+                    <finalName>jpeg-decoder</finalName>
                     <archive>
                         <manifest>
                             <mainClass>main.Main</mainClass>
@@ -69,6 +69,24 @@
             </plugin>
         </plugins>    
     </build>
+    <profiles>
+		<profile>
+			<id>test</id>
+			<properties>
+				<log>C:\endava\workspace\jpeg-decoder\logs\</log>
+				<input-path>C:\endava\workspace\jpeg-decoder\input</input-path>
+				<output-path>C:\endava\workspace\jpeg-decoder\output</output-path>
+			</properties>
+		</profile>
+		<profile>
+			<id>env</id>
+			<properties>
+				<log>/media/pi/seagate/repo-min/.logs/</log>
+				<input-path>/media/pi/seagate/repo/photo/2019/zurich_03</input-path>
+				<output-path>/media/pi/seagate/repo-min/photo-min</output-path>
+			</properties>
+		</profile>
+	</profiles>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -87,5 +105,10 @@
             <artifactId>log4j-core</artifactId>
             <version>2.7</version>
         </dependency>
+<!--         <dependency> -->
+<!--         	<groupId>java-agent</groupId> -->
+<!--  			<artifactId>java-agent</artifactId> -->
+<!--  			<version>1</version> -->
+<!--         </dependency> -->
     </dependencies>
 </project>
