Enable full repository scan and each file transformation

--- a/resources/app.properties
+++ b/resources/app.properties
@@ -1,3 +1,10 @@
 input-path=${input-path}
 output-path=${output-path}
 tmp-path=${tmp-path}
+
+#time in milliseconds between two consequent file processing
+cooldown.file = 30000
+#time in milliseconds between two consequent repository processing
+#(by repository processing here it's meant to be full repository scan
+#and each jpg image transformation)
+cooldown.repo = 604800
